# alexandria

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_QUICK_START.md  Dockerfile  README.md  SCHEMA_VERSIONS.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 07bc32e4e2a1_add_tts_cache_and_progress_audio_.py  19cb07a3b2b4_add_audit_logs_table.py  2667f47d7311_drop_classification_foreign_key.py  368ec4f939ff_add_reading_progress.py  5833fa3c6d93_add_user_id_to_reading_progress.py  66b920a99afe_add_backdrop_path.py  75b0e362b398_initial_schema.py  8594c45493c3_add_tts_settings_table.py  add_pile_color.py  b2640a924996_add_sessions_table.py  c1fc57423096_add_system_piles.py  cd19c4aa26ac_add_backdrop_path.py  ce410afb8eee_restore_classification_fk_with_data.py  f873c1cadc3d_add_edit_requests_table.py
docs/: AUTH_IMPLEMENTATION_STATUS.md  ROADMAP.md  architecture.md  authentication.md  backup-restore.md  cli-usage.md  deployment.md  features.md  initialization.md  release-process.md  schema.md  tech-stack.md  the-librarian.md  web-ui-design.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
scripts/: cleanup_old_library.py  dedupe_files.py  empty_trash.py  fix_merged_items.py
src/librarian/: __init__.py  cli.py  config.py  pipeline.py
src/librarian/classifier/: __init__.py  classifier.py  subject_mapping.py
src/librarian/covers/: __init__.py  covers.py
src/librarian/db/: __init__.py  models.py  seed.py  session.py
src/librarian/enricher/: __init__.py  calibre.py  enricher.py  google_books.py  librarything.py  oclc.py  openlibrary.py
src/librarian/filer/: __init__.py  filer.py  naming.py  transfer.py
src/librarian/identifier/: __init__.py
src/librarian/inspector/: __init__.py  checksum.py  formats.py  metadata.py  scanner.py
src/web/: __init__.py  config.py  database.py  main.py  schema_version.py  startup.py
src/web/api/: tts.py  (+9 more)
tests/: __init__.py
(+48 files in other folders)
